Add more content to the landing page

--- a/app/views/products/helpers/_how.erb
+++ b/app/views/products/helpers/_how.erb
@@ -16,13 +16,16 @@
         <h5 class="integration_header"> GitHub </h5>
         <p >
           <a href='https://github.com/login/oauth/authorize?client_id=50fb47103b8a3f03b2cd'>Login with your GitHub account</a>
-          and turn on the switch beside the project file you want to monitor. VersionEye will notify you about out-dated dependencies via email.
+          and turn on the switch beside the project file you want to monitor. VersionEye will notify you about outdated dependencies via email.
         </p>
         <p>
           <%= image_tag "marketing/github_integration.png" %>
         </p>
         <p class="l_padding_top">
-          VersionEye shows you all supported project files in all branches in all of your repositories.
+          VersionEye shows you all supported project files in all branches for all of your repositories. After parsing your project file you can immediately see which dependencies are outdated.
+        </p>
+        <p>
+          <%= image_tag "marketing/versioneye_project.png" %>
         </p>
       </div>
     </div>
@@ -70,9 +73,4 @@
   </div>
 
 </div>
-
-
-
-
-
 
