Add dependency wheel for java pages.

--- a/app/views/products/_product_show_dependencies.html.erb
+++ b/app/views/products/_product_show_dependencies.html.erb
@@ -19,7 +19,9 @@
 
 
   <% dependencies = @product.dependencies %>
-  <% if @product.language.eql?(Product::A_LANGUAGE_NODEJS) && !dependencies.empty? && dependencies.count > 2 %>
+  <% if ( @product.language.eql?(Product::A_LANGUAGE_NODEJS) ||
+          @product.language.eql?(Product::A_LANGUAGE_JAVA) ) &&
+          !dependencies.empty? && dependencies.count > 2 %>
     <a href="/<%= @product.language_esc%>/<%= @product.to_param%>/<%= @product.version_to_url_param %>/visual_dependencies">
       See visual page
     </a>
