--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -69,7 +69,7 @@
         <a href="/Node.JS"><span class = "icon_nodejs on"></span></a>
       </div>
       <div class="span9">
-        <h5 class="integration_header"> Java </h5>
+        <h5 class="integration_header"> Node.JS </h5>
         <p >
           For Node.JS <a href="https://www.npmjs.org/">NPM</a> is supported. VersionEye can monitor your package.json file.
         </p>
