Simplify Landing Page

--- a/app/views/products/helpers/_support_for_packagemanagers.html.erb
+++ b/app/views/products/helpers/_support_for_packagemanagers.html.erb
@@ -5,7 +5,11 @@
     <h2 class="no_margin" > Package Managers </h2>
 
     <p class="l_padding_top">
-      VersionEye currently supports 9 package managers.
+      VersionEye currently supports these 9 package managers: <a href="https://getcomposer.org/">Composer</a>,
+      <a href="http://bundler.io/">Bundler</a>, <a href="https://pypi.python.org/pypi/pip/">PIP</a>,
+      <a href="https://www.npmjs.org/">NPM</a>, <a href="http://bower.io/">Bower</a>,
+      <a href="http://leiningen.org/">Leiningen</a>, <a href="http://cocoapods.org/">CocoaPods</a>,
+      <a href="http://maven.apache.org/">Maven</a> and <a href="http://www.gradleware.com/">Gradle</a>.
     </p>
 
     <div class="row l_padding_top">
@@ -24,90 +28,6 @@
         </p>
         <p>
           <a href="https://ant.apache.org/ivy/">Apache Ivy</a> support is part of our roadmap.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/PHP"><span class = "icon_php on" ></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> PHP </h5>
-        <p >
-          For PHP we support <a href="https://getcomposer.org/">Composer</a>. VersionEye can monitor composer.json and composer.lock files.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/Ruby"><span class = "icon_ruby on" ></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> Ruby </h5>
-        <p >
-          For Ruby we support <a href="http://bundler.io/">Bundler</a>. VersionEye can monitor your Gemfile and Gemfile.lock.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/Python"><span class = "icon_python on" ></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> Python </h5>
-        <p >
-          For Python we support <a href="https://pypi.python.org/pypi/pip/">PIP</a>. VersionEye can monitor your requirements.txt and setup.py files.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/Node.JS"><span class = "icon_nodejs on"></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> Node.JS </h5>
-        <p >
-          For Node.JS <a href="https://www.npmjs.org/">NPM</a> is supported. VersionEye can monitor your package.json file.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/JavaScript"><span class = "icon_javascript on"></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> JavaScript </h5>
-        <p >
-          For frontend JavaScript we implemented support for <a href="http://bower.io/">Bower</a>. VersionEye can monitor your bower.json file.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/Clojure"><span class = "icon_clojure on"></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> Clojure </h5>
-        <p >
-          For the Clojure language we implemented support for <a href="http://leiningen.org/">Leiningen</a>. VersionEye can monitor your project.clj file.
-        </p>
-      </div>
-    </div>
-
-    <div class="row l_padding_top">
-      <div class="span1 integration_icon" >
-        <a href="/Objective-C"><span class = "icon_objective-c on"></span></a>
-      </div>
-      <div class="span9">
-        <h5 class="integration_header"> Objective-C </h5>
-        <p >
-          For all the iPhone devs who work with Objective-C we implemented support for <a href="http://cocoapods.org/">CocoaPods</a>. VersionEye can monitor your *.podspec file.
         </p>
       </div>
     </div>
