--- a/app/views/products/helpers/_why.html.erb
+++ b/app/views/products/helpers/_why.html.erb
@@ -1,6 +1,26 @@
 <div class="row" >
   <div class="span10 l_padding_surround" >
     <h2 class="no_margin" > Why? </h2>
+  </div>
+</div>
+
+<div class="marketing" >
+  <h2 class="casual">Because software libraries don't update themselves</h2>
+  <p>They just become out-dated!</p>
+</div>
+<div class="marketing" >
+  <h2 class="casual">Because software libraries are not like iPhone apps</h2>
+  <p>They are passive! They don't tell you that they are out-dated!</p>
+</div>
+<div class="marketing" >
+  <h2 class="casual">Because software developers are wasting time with ...</h2>
+  <p>looking manually for updates. Save time and money by automating this process.</p>
+</div>
+
+<hr/>
+
+<div class="row" >
+  <div class="span10 l_padding_surround" >
     <p class="l_padding_top">
       Because core committers of open source projects don't release new versions just for fun.
       Releasing a new version of an open source project is a lot of work. An artifact
@@ -30,19 +50,4 @@
       <a href="http://en.wikipedia.org/wiki/Continuous_Integration" target="contint" >continuous integration</a> and <a href="http://semver.org" target="semver">semantic versioning</a>.
     </p>
   </div>
-</div>
-
-<hr/>
-
-<div class="marketing" >
-  <h2 class="casual">Because software libraries don't update themselves</h2>
-  <p>They just become out-dated!</p>
-</div>
-<div class="marketing" >
-  <h2 class="casual">Because software libraries are not like iPhone apps</h2>
-  <p>They are passive! They don't tell you that they are out-dated!</p>
-</div>
-<div class="marketing" >
-  <h2 class="casual">Because software developers are wasting time with ...</h2>
-  <p>looking manually for updates. Save time and money by automating this process.</p>
 </div>
