Update the about page

--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -12,12 +12,12 @@
     <li>
       <div class="thumbnail">
         <div class = "image">
-          <%= link_to image_tag("about/RobertReiz.png"), "https://twitter.com/RobertReiz", :target => "rob" %>
+          <%= link_to image_tag("about/RobertReiz.jpg"), "https://twitter.com/RobertReiz", :target => "rob" %>
             <h5>Robert Reiz</h5>
-            <strong>CEO &amp; Founder</strong>
+            <strong>Engineer</strong>
         </div>
         <div class = "caption">
-            <p>VersionEye is Robert's 3rd Start-Up. He is excited about exploring new ideas, new places and new projects.
+            <p>Creator of VersionEye, Continuous Updating and Geek2Geek. Fanboy of Semantic Versioning, Dependency Management, Ruby, JavaScript
             </p>
         </div>
       </div>
@@ -28,7 +28,7 @@
         <div class = "image">
           <%= link_to image_tag("about/TimoSulg.jpg"), "https://twitter.com/timgluz", :target => "tim" %>
           <h5>Timo Sulg</h5>
-          <strong>Developer</strong>
+          <strong>Engineer</strong>
         </div>
         <div class = "caption">
           <p>
@@ -41,13 +41,13 @@
     <li>
       <div class="thumbnail">
         <div class = "image">
-          <%= image_tag "about/MadlenRanzinger.jpg" %>
-          <h5>Madlen Ranzinger</h5>
-          <strong>Social Media</strong>
+          <%= image_tag "about/RichardMetzler.png" %>
+          <h5>Richard Metzler</h5>
+          <strong>Engineer</strong>
         </div>
         <div class = "caption">
           <p>
-            Madlen is the multi-talented multi-tasker. She is ensuring that all things run smoothly in our office.
+            Richard knows several languages such es Node.JS, Erlang and Go, but his favorite languages is still Ruby.
           </p>
         </div>
       </div>
