--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -13,3 +13,8 @@
   source code and notify you about outdated dependencies in your project. Beside that it
   shows you which licenses your dependencies are using.
 </p>
+<p>
+  VersionEye is "free software" (FLOSS). You can use it for free for your open source projects and you are always
+  in control of your data. We follow the easy-in &amp; easy-out philosophy. The VersionEye project containes
+  several code repositories. Some of them are open source and we plan to open source more in future.
+</p>
