--- a/app/views/shared/_about.html.erb
+++ b/app/views/shared/_about.html.erb
@@ -1,11 +1,11 @@
 <p>
-	VersionEye is a cross-platform search engine for open source software libraries. Currently
-  we track more than 325K open source libraries from <b>Java</b>, <b>Ruby</b>, <b>Python</b>,
+	VersionEye is a cross-platform search engine for free/libre/open source software libraries. Currently
+  we track more than 325K free/libre/open source libraries from <b>Java</b>, <b>Ruby</b>, <b>Python</b>,
   <b>Node.JS</b>, <b>PHP</b>, <b>JavaScript</b>, <b>Objective-C</b>, <b>R</b> and <b>Clojure</b>. Soon we will
   add .NET, Perl and other languages.
 </p>
 <p>
-  You can follow any of the 325K open source libraries on VersionEye and we will notify you
+  You can follow any of the 325K free/libre/open source libraries on VersionEye and we will notify you
   as soon the next version is released. VersionEye helps you to stay up-to-date.
 </p>
 <p>
@@ -14,7 +14,7 @@
   shows you which licenses your dependencies are using.
 </p>
 <p>
-  VersionEye is "free software" (FLOSS). You can use it for free for your open source projects and you are always
+  VersionEye is "free software" (FLOSS). You can use it for free for your free/libre/open source projects and you are always
   in control of your data. We follow the easy-in &amp; easy-out philosophy. The VersionEye project containes
-  several code repositories. Some of them are open source and we plan to open source more in future.
+  several code repositories. Some of them are free/libre/open source and we plan to free/libre/open source more in future.
 </p>
