--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -15,8 +15,8 @@
       E-Mail: contact [at] versioneye.com<br />
       Tel: +49 331 97992270<br />
       <br />
-      Amtsgericht: Berlin / Charlottenburg<br />
-      Handelsregister: Berlin, HRB 144242 B<br />
+      Amtsgericht: Potsdam<br />
+      Handelsregister: Potsdam, HRB 26748 P<br />
       USt-IdNr.: DE282045007<br />
       CEO: Robert Reiz<br />
     </address>
