--- a/app/views/page/impressum.html.erb
+++ b/app/views/page/impressum.html.erb
@@ -5,32 +5,20 @@
 </div>
 <div class = "row">
   <div class="offset1 span4" >
-    <strong>VersionEye</strong><br/>
-    <br/>
-    524 Union Street, #131<br/>
-    North Beach<br/>
-    San Francisco, CA 94133<br/>
-    USA<br/>
-    <br/>
-    E-Mail: contact [at] versioneye.com<br />
-    Tel: +1-415-967-3497<br />
-    <br />
-  </div>
-  <div class="offset1 span4" >
     <address>
       <strong>VersionEye GmbH</strong><br/>
       <br/>
-      Invalidenstraße 50/51<br/>
-      10557 Berlin<br/>
+      Rudolf-Breitscheid-Straße 187<br/>
+      14482 Potsdam<br/>
       Germany<br/>
       <br/>
       E-Mail: contact [at] versioneye.com<br />
       Tel: +49 331 97992270<br />
       <br />
-      Amtsgericht: Berlin / Charlottenburg<br />
-      Handelsregister: Berlin, HRB 144242 B<br />
+      Amtsgericht: Potsdam<br />
+      Handelsregister: Potsdam, HRB 26748 P<br />
       USt-IdNr.: DE282045007<br />
-      Geschäftsführer: Robert Reiz<br />
+      Geschaeftsfuehrer: Robert Reiz<br />
     </address>
   </div>
 </div>
