Make pagination work and use Settings from verisoneye-core

--- a/app/views/language/helpers/_followers.html.erb
+++ b/app/views/language/helpers/_followers.html.erb
@@ -12,7 +12,7 @@
                                       :title => user.fullname,
                                       :style => "width: 68px;",
                                       :gravatar => {:size => 68,
-                                                    :default => "#{Settings.server_url}/profile_icon.png" }) %>
+                                                    :default => "#{Settings.instance.server_url}/profile_icon.png" }) %>
               </div>
             </a>
           <% end %>
