--- a/app/views/settings/connect/index.html.erb
+++ b/app/views/settings/connect/index.html.erb
@@ -33,7 +33,7 @@
             scopes: [<%= scopes %>]
           <% end %>
         <% else %>
-          <a href='https://github.com/login/oauth/authorize?client_id=<%= Settings.github_client_id %>'  >
+          <a href='https://github.com/login/oauth/authorize?client_id=<%= Settings.instance.github_client_id %>'  >
             Connect with GitHub
           </a>
         <% end %>
