--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -25,7 +25,7 @@
             <div class="span2" >
               <a href="https://twitter.com/share"
                    class="twitter-share-button"
-                   data-url="<%= Settings.server_url %>/vc/<%= comment.id %>"
+                   data-url="<%= Settings.instance.server_url %>/vc/<%= comment.id %>"
                    data-text="<%= comment.user.fullname %> commented <%= comment_product.name_and_version %> @VersionEye read the #review here:"
                    data-count="horizontal" >Twitter</a>
               <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
