--- a/app/views/shared/_show_version_comment.html.erb
+++ b/app/views/shared/_show_version_comment.html.erb
@@ -2,7 +2,7 @@
 
 	<div class="span1" style = "width:60px; text-align: left;">
 		<a href="/users/<%= comment.user.username %>">
-			<%= gravatar_image_tag( comment.user.email, :style => 'width: 50px;', :alt => comment.user.fullname, :gravatar => { :size => 50, :default => "#{Settings.server_url}/profile_icon.png" }) %>
+			<%= gravatar_image_tag( comment.user.email, :style => 'width: 50px;', :alt => comment.user.fullname, :gravatar => { :size => 50, :default => "#{Settings.instance.server_url}/profile_icon.png" }) %>
 		</a>
 	</div>
 
@@ -20,7 +20,7 @@
 			<div class="span2" >
 				<a href="https://twitter.com/share"
 					   class="twitter-share-button"
-					   data-url="<%= Settings.server_url %>/vc/<%= comment.id %>"
+					   data-url="<%= Settings.instance.server_url %>/vc/<%= comment.id %>"
 					   data-text="<%= comment.user.fullname %> commented <%= @product.name_and_version %> @VersionEye read the #review here:"
 					   data-count="horizontal" >Twitter</a>
 				<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
