Add Bitbucket to the login options for the guest area

--- a/app/views/shared/_dialog_follow.html.erb
+++ b/app/views/shared/_dialog_follow.html.erb
@@ -14,6 +14,7 @@
 
     <div style="padding: 20px 0;">
       <%= render 'shared/login_with_github' %>
+      <%= render 'shared/login_with_bitbucket' %>
     </div>
 
     <div>
