--- a/app/views/settings/_navi.html.erb
+++ b/app/views/settings/_navi.html.erb
@@ -1,15 +1,26 @@
 <% content_for :title, 'Settings' %>
 
 <ul class = "nav nav-pills nav-stacked">
-  <li><%= link_to 'Profile', settings_profile_path %></li>
-  <li><%= link_to 'Links'              , settings_links_path %></li>
-  <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
-  <li><%= link_to 'Plans & Pricing'    , settings_plans_path %></li>
-  <li><%= link_to 'Payments'           , settings_payments_path %></li>
-  <li><%= link_to 'Connect'            , settings_connect_path %></li>
-  <li><%= link_to 'Password'           , settings_password_path %></li>
-  <li><%= link_to 'Notification Center', settings_notifications_path %></li>
-  <li><%= link_to 'Privacy'            , settings_privacy_path %></li>
-  <li><%= link_to 'API Key'            , settings_api_path %></li>
-  <li><%= link_to 'Delete'             , settings_delete_path %></li>
+
+  <% if signed_in_admin? %>
+    <li><%= link_to 'Profile'            , settings_profile_path %></li>
+    <li><%= link_to 'E-Mail Settings'    , settings_emailsettings_path %></li>
+    <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
+    <li><%= link_to 'Password'           , settings_password_path %></li>
+  <% else %>
+    <li><%= link_to 'Profile'            , settings_profile_path %></li>
+    <li><%= link_to 'Links'              , settings_links_path %></li>
+    <li><%= link_to 'E-Mails'            , settings_emails_path %></li>
+    <li><%= link_to 'Plans & Pricing'    , settings_plans_path %></li>
+    <li><%= link_to 'Payments'           , settings_payments_path %></li>
+    <li><%= link_to 'Connect'            , settings_connect_path %></li>
+    <li><%= link_to 'Password'           , settings_password_path %></li>
+    <li><%= link_to 'Notification Center', settings_notifications_path %></li>
+    <li><%= link_to 'Privacy'            , settings_privacy_path %></li>
+    <li><%= link_to 'API Key'            , settings_api_path %></li>
+    <li><%= link_to 'Delete'             , settings_delete_path %></li>
+  <% end %>
+
+
+
 </ul>
