--- a/app/views/layouts/_html_head.html.erb
+++ b/app/views/layouts/_html_head.html.erb
@@ -1,4 +1,4 @@
-  <link href="<%= Settings.instance.server_url_https %>/favicon.ico" rel="shortcut icon"  />
+  <link href="<%= Settings.instance.server_url %>/favicon.ico" rel="shortcut icon"  />
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Droid+Serif|Droid+Serif:bold|Droid+Sans|Droid+Sans:bold">
 
   <!--[if lt IE 8]>
