--- a/app/views/user/projects/helpers/_project_dependency_row.html.erb
+++ b/app/views/user/projects/helpers/_project_dependency_row.html.erb
@@ -10,7 +10,15 @@
     <%= dep.version_current || "UNKNOWN" %>
   </td>
   <td>
-    <span ><%= dep.version_requested || "UNKNOWN" %></span>
+    <span >
+      <% if dep.version_requested.to_s.match(/\A\:path/) %>
+        <span title="<%= dep.version_requested %>">:path</span>
+      <% elsif dep.version_requested.to_s.match(/\A\:git/) %>
+        <span title="<%= dep.version_requested %>">:git</span>
+      <% else %>
+        <%= dep.version_requested || "UNKNOWN" %>
+      <% end %>
+    </span>
   </td>
   <td>
     <span >
